# home-file-server

./: Cargo.toml  Dockerfile  LICENSE.md  Rocket.toml  docker-compose.yaml
migrations/: 0001_init.sql
src/: app_data.rs  controlers.rs  main.rs  models.rs  utility.rs
src/controlers/: bucket.rs  user_file.rs  user_info.rs
src/models/: bucket.rs  file.rs  user_file.rs  user_info.rs
src/utility/: api.rs  jwt_token.rs
